finish weather app

--- a/src/less/media.less
+++ b/src/less/media.less
@@ -1,3 +1,2 @@
-@phone: ~"(max-width: 600px)";
-@tablet: ~"(min-width: 601px)";
-@desktop: ~"(min-width: 992px)";
+@mobile: ~"(max-width: 1019px)";
+@web: ~"(min-width: 1020px)";
