--- a/src/pages/Weather/Weather.css
+++ b/src/pages/Weather/Weather.css
@@ -11,8 +11,10 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+  background-color: #eef6fa;
 }
-@media (max-width: 600px) {
+@media (max-width: 1019px) {
   #weather {
     width: 90%;
   }
@@ -20,43 +22,54 @@ body {
     padding: 0;
   }
   #bottom-row-cards {
-    height: 48.25vh;
+    height: 100% !important;
   }
   .small-card {
     text-align: start;
+    width: 20%;
   }
   .small-card-container {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    height: 10vh !important;
     align-items: center;
+    justify-content: space-around;
     background-color: #eef6fa;
     margin-bottom: 0.25rem;
     margin-left: 0.125rem;
     margin-right: 0.125rem;
     border-radius: 5px;
   }
+  #main-card-container {
+    height: 32.5vh !important;
+    justify-content: center;
+  }
+  #weather-information {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  #date {
+    margin-top: 1rem !important;
+  }
+  .small-card-weather-icon {
+    width: 15% !important;
+    background-color: aquamarine;
+  }
+  #top-small-card {
+    padding: 0 !important;
+    font-size: 1.25rem;
+  }
+  .small-card-weather-temp {
+    width: 15%;
+  }
+  #icon {
+    height: 15vh;
+  }
 }
-@media (min-width: 601px) {
+@media (min-width: 1020px) {
   #weather {
-    width: 90%;
-  }
-  .weather-header {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-  #bottom-row-cards {
-    height: 26.6vh;
-  }
-  .small-card-container {
-    width: 25%;
-    background-color: #ffffff;
-    border-radius: 0px 0px 7.5px 7.5px;
-  }
-}
-@media (min-width: 992px) {
-  #weather {
-    width: 50%;
+    width: 44%;
   }
   .weather-header {
     padding-left: 4rem;
@@ -64,13 +77,22 @@ body {
     height: 14vh;
   }
   #bottom-row-cards {
-    height: 26.6vh;
+    height: 27vh;
+    justify-content: space-around;
   }
   .small-card-container {
-    width: 25%;
-    background-color: #ffffff;
+    width: 24.5%;
+    background-color: #eef6fa;
     border-radius: 0px 0px 7.5px 7.5px;
+    margin-top: 0.125rem;
   }
+  .small-card-weather-icon {
+    margin-top: 5%;
+    height: 40%;
+  }
+}
+*:focus {
+  outline: none;
 }
 #page {
   text-align: center;
@@ -79,10 +101,8 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #333338;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
   font-family: "Nexa Extra Light";
+  align-items: center;
 }
 .weather-header {
   display: flex;
@@ -90,7 +110,7 @@ body {
   justify-content: space-between;
 }
 .weather-header > a {
-  width: 33%;
+  width: 30%;
   font-family: "Nexa Extra Light";
   color: #333338;
 }
@@ -108,33 +128,73 @@ body {
   display: flex;
   flex-direction: column;
   padding-top: 0.125rem;
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
-}
-#main-card {
-  height: 35.5vh;
-  background-color: #eef6fa;
-  margin: 0.125rem;
-  border-radius: 7.5px 7.5px 0px 0px;
+  padding-left: 0.1rem;
+  padding-right: 0.1rem;
 }
 #bottom-row-cards {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 0.125rem;
+  justify-content: "center";
 }
 .small-card-container {
   padding-bottom: 0.125rem;
+  height: 95%;
 }
 .small-card {
-  height: 33%;
   margin-left: 0.125rem;
   margin-right: 0.125rem;
-  background-color: #eef6fa;
+}
+#top-small-card {
+  padding-top: 1rem;
+  font-size: 1.25rem;
 }
 #small-card-0 {
   border-radius: 0px 0px 0px 7.5px;
 }
 #small-card-3 {
   border-radius: 0px 0px 7.5px 0px;
+}
+.bottom-small-card {
+  font-family: "Nexa Extra Bold";
+  margin-top: -0.25rem;
+}
+#main-card-container {
+  margin: 0.1rem;
+  background-color: #eef6fa;
+  border-radius: 7.5px 7.5px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+#weather-information {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 2rem 0 2rem 0;
+}
+.main-card-icon {
+  padding-left: 0.5rem;
+  padding-right: 0.51rem;
+}
+#icon {
+  background-color: #5f94bf;
+  border-radius: 10px;
+}
+#date {
+  margin-top: 2rem;
+}
+#temperature {
+  font-family: "Nexa Extra Bold";
+  margin: 0;
+}
+.small-card-weather-icon {
+  background-color: #5f94bf;
+  border-radius: 10px;
+}
+.main-card-info {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 /*# sourceMappingURL=Weather.css.map */
