--- a/src/pages/Weather/Weather.less
+++ b/src/pages/Weather/Weather.less
@@ -40,7 +40,6 @@ body {
     height: 10vh !important;
     align-items: center;
     justify-content: space-around;
-    background-color: @app-primary;
     margin-bottom: 0.25rem;
     margin-left: 0.125rem;
     margin-right: 0.125rem;
@@ -87,7 +86,6 @@ body {
   }
   .small-card-container {
     width: 24.5%;
-    background-color: @app-primary;
     border-radius: 0px 0px 7.5px 7.5px;
     margin-top: 0.125rem;
   }
@@ -153,6 +151,7 @@ body {
 .small-card-container {
   padding-bottom: 0.125rem;
   height: 95%;
+  background-color: @app-primary;
 }
 
 .small-card {
@@ -212,6 +211,7 @@ body {
 #temperature {
   font-family: "Nexa Extra Bold";
   margin: 0;
+  width: 7vw;
 }
 
 .small-card-weather-icon {
