edit styles for icon size

--- a/src/pages/Weather/Weather.css
+++ b/src/pages/Weather/Weather.css
@@ -61,9 +61,6 @@ body {
   .small-card-weather-temp {
     width: 15%;
   }
-  #icon {
-    height: 15vh;
-  }
 }
 @media (min-width: 1020px) {
   #weather {
@@ -173,11 +170,13 @@ body {
 }
 .main-card-icon {
   padding-left: 0.5rem;
-  padding-right: 0.51rem;
+  padding-right: 1rem;
+  margin-top: 1rem;
 }
 #icon {
   background-color: #5f94bf;
   border-radius: 10px;
+  height: 90%;
 }
 #date {
   margin-top: 2rem;
