--- a/src/pages/Weather/Weather.less
+++ b/src/pages/Weather/Weather.less
@@ -66,9 +66,6 @@ body {
   .small-card-weather-temp {
     width: 15%;
   }
-  #icon {
-    height: 15vh;
-  }
 }
 
 @media @web {
@@ -196,12 +193,14 @@ body {
 
 .main-card-icon {
   padding-left: 0.5rem;
-  padding-right: 0.51rem;
+  padding-right: 1rem;
+  margin-top: 1rem;
 }
 
 #icon {
   background-color: #5f94bf;
   border-radius: 10px;
+  height: 90%;
 }
 
 #date {
